--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    </head>
    <body>
       <!-- content starts here -->
-      <h1>This is my website.</h1>
+      <h1>This is my .</h1>
       <!-- content ends here -->
       <footer>
          <hr>
