--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
       <script src="valid.js"></script>
    </head>
-   <body>
+   <body>   
       <!-- content starts here -->
-      <h1>This is my .</h1>
+      <h1>Hi! This is my website .</h1>
+      <h3>My name is Zidan</h3>
       <!-- content ends here -->
       <footer>
          <hr>
