--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
    </head>
    <body>   
       <!-- content starts here -->
-      <h1>Hi! This is my website .</h1>
-      <h3>My name is Zidan</h3>
+      <h1>Hi! This is my website.</h1>
+      <h3>My name is Zidan. Some of my Hobbies include: </h3>
+      <p> Running
+          Cycling
+          Collecting
+          Motorsports   </p>
       <!-- content ends here -->
       <footer>
          <hr>
