--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
           Cycling
           Collecting
           Motorsports   </p>
+
+      <p> You can find some of my projects here: </p>
+
+      <p href="apsva.us"> My expenses calculator</p>
       <!-- content ends here -->
       <footer>
          <hr>
