--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
       <p> You can find some of my projects here: </p>
 
-      <p></p> href="apsva.us"> My expenses calculator</p>
+      <p href="apsva.us"> My expenses calculator</p>
       <!-- content ends here -->
       <footer>
          <hr>
