--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
       <p> You can find some of my projects here: </p>
 
-      <a href="apsva.us"> My expenses calculator</a>
+      <a href="https://apsva.us"> My expenses calculator</a>
       <!-- content ends here -->
       <footer>
          <hr>
