changed background color

--- a/index.html
+++ b/index.html
@@ -5,15 +5,52 @@
       <title>Zindidban</title>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
       <script src="valid.js"></script>
+
+      <style src="style.css"></style>
+      <link rel="stylesheet" href="style.css"> </link>
    </head>
-   <body>   
+   
       <!-- content starts here -->
       <h1>Hi! This is my website.</h1>
       <h3>My name is Zidan. Some of my Hobbies include: </h3>
-      <p> Running
-          Cycling
-          Collecting
-          Motorsports   </p>
+      <ul>
+         <li>Running</li>
+         <li>Motorsports</li>
+         <li>Biking</li>
+      </ul>
+
+      <h2>Here is my schedule:</h2>
+      <table>
+         <tr>
+            <th>Period</th>
+            <th>1 Day</th>
+            <th>2 Day</th>
+         </tr>
+
+         <tr>
+         <td>Per 1/2</td>
+         <td>Math</td>
+         <td>Physics</td>
+         </tr>
+
+         <tr>
+            <td>Per 3</td>
+            <td>History</td>
+            <td>History</td>
+         </tr>
+
+         <tr>
+            <td>Per 4/5</td>
+            <td>AP Psych</td>
+            <td>AP Consult</td>
+         </tr>
+
+         <tr>
+            <td>Per 6/7</td>
+            <td>Comp Programming</td>
+            <td>English</td>
+         </tr>
+      </table>
 
       <p> You can find some of my projects here: </p>
 
