--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
       <style src="style.css"></style>
       <link rel="stylesheet" href="style.css"> </link>
    </head>
-   
+   <body>
+      <nav>
+         <a href="index.html"> Home</a> |
+         <a href="sydneysweeney.html"> Sydney Sweeney</a>
+      </nav>
       <!-- content starts here -->
       <h1>Hi! This is my website.</h1>
       <h3>My name is Zidan. Some of my Hobbies include: </h3>
@@ -54,7 +58,8 @@
 
       <p> You can find some of my projects here: </p>
 
-      <a href="https://apsva.us"> My expenses calculator</a>
+      <a href="https://apsva.us"> Wakefield HS Homepage</a>
+      <img src="zidan.jpeg">
       <!-- content ends here -->
       <footer>
          <hr>
